--- a/src/app/features/organisation-section/components/customer/customer.component.html
+++ b/src/app/features/organisation-section/components/customer/customer.component.html
@@ -4,7 +4,7 @@
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
             (click)="selectedSection = 'customer'">Customer</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
-            (click)="selectedSection = 'customerDomain'">Customer Categories</button>
+            (click)="selectedSection = 'customerCategory'">Customer Categories</button>
     </div>
 
     <!-- Customer Section -->
@@ -176,20 +176,20 @@
     </div>
 
     <!-- Customer Domain Section -->
-    <div *ngIf="selectedSection === 'customerDomain'">
-        <button class="bg-green-500 text-white px-4 py-2 rounded mb-4" (click)="toggleDomainModal()">+ Add
+    <div *ngIf="selectedSection === 'customerCategory'">
+        <button class="bg-green-500 text-white px-4 py-2 rounded mb-4" (click)="toggleCategoryModal()">+ Add
             Categories</button>
 
         <!-- Add Domain Form -->
         <!-- Modal -->
-        <div *ngIf="showDomainModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex justify-center items-center"
-            (click)="toggleDomainModal()">
+        <div *ngIf="showCategoryModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex justify-center items-center"
+            (click)="toggleCategoryModal()">
             <div class="bg-white rounded-lg shadow-lg p-6 w-1/3 relative" (click)="$event.stopPropagation()">
                 <!-- Modal Header with Close Button -->
                 <div class="flex justify-between items-center border-b pb-2">
                     <h3 class="text-xl font-semibold">Add New Domain</h3>
                     <button class="text-gray-500 hover:text-gray-700 text-2xl"
-                        (click)="toggleDomainModal()">&times;</button>
+                        (click)="toggleCategoryModal()">&times;</button>
                 </div>
 
                 <!-- Form Content -->
