--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@keyframes loading-bar {
+    0% {
+      transform: translateX(-100%);
+    }
+    50% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(100%);
+    }
+  }
+  
+  .animate-loading-bar {
+    animation: loading-bar 2s infinite;
+  }
+  
