--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -54,8 +54,8 @@
                     <td class="border p-2">{{ employee.user_blood_group }}</td>
                     <td class="border p-2">{{ employee.user_DOJ | date:'dd-MMM-yyyy' }}</td>
                     <td class="border p-2">
-                        <button class="bg-blue-500 text-white px-2 py-1 rounded"
-                            (click)="assignDetails(employee)">Assign Details</button>
+                        <!-- <button class="bg-blue-500 text-white px-2 py-1 rounded"
+                            (click)="assignDetails(employee)">Assign Details</button> -->
                         <button class="bg-red-500 text-white px-2 py-1 rounded"
                             (click)="deleteEmployee(employee.user_id)">Delete</button>
                     </td>
