--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -3,8 +3,6 @@
   <img src="credenca-logo.png" alt="Logo" class="h-10 w-auto mb-2 sm:mb-0 px-7" />
 
 
-
-    <!-- Navbar Center (Organisation Links - Conditionally Shown) -->
     <!-- Navbar Center (Organisation Links - Conditionally Shown) -->
 <div *ngIf="showOrganisationLinks" class="hidden sm:flex space-x-6">
   <a [routerLink]="['/organisation', 'customer']" routerLinkActive="font-bold text-blue-600"
@@ -18,6 +16,26 @@
 </div>
 
 
+<!-- Navbar Center (Timesheet Links - Conditionally Shown) -->
+<div *ngIf="showTimesheetLinks" class="hidden sm:flex space-x-6">
+  <a [routerLink]="['/timesheet', 'summary-report']" routerLinkActive="font-bold text-blue-600"
+    class="text-gray-700 hover:text-blue-600">Timesheet Summary Report</a>
+  <a [routerLink]="['/timesheet', 'fill-backdated-timesheet']" routerLinkActive="font-bold text-blue-600"
+    class="text-gray-700 hover:text-blue-600">Fill Backdated Timesheet</a>
+  <a [routerLink]="['/timesheet', 'view-my-projects']" routerLinkActive="font-bold text-blue-600"
+    class="text-gray-700 hover:text-blue-600">View My Projects</a>
+  <a [routerLink]="['/timesheet', 'fill-timesheet']" routerLinkActive="font-bold text-blue-600"
+    class="text-gray-700 hover:text-blue-600">Fill Timesheet</a>
+  <a [routerLink]="['/timesheet', 'view-timesheet']" routerLinkActive="font-bold text-blue-600"
+    class="text-gray-700 hover:text-blue-600">View Timesheet</a>
+  <a [routerLink]="['/timesheet', 'export-my-timesheet']" routerLinkActive="font-bold text-blue-600"
+    class="text-gray-700 hover:text-blue-600">Export My Timesheet</a>
+  <a [routerLink]="['/timesheet', 'managers-hub']" routerLinkActive="font-bold text-blue-600"
+    class="text-gray-700 hover:text-blue-600">Manager's Hub</a>
+</div>
+
+
+
   <!-- Navbar Right Section -->
   <div class="flex flex-col sm:flex-row items-center gap-2 sm:gap-6 mt-2 sm:mt-0">
     <!-- User Dropdown -->
@@ -25,7 +43,7 @@
       <button (click)="toggleDropdown()"
         class="flex items-center text-gray-700 font-medium text-sm sm:text-base cursor-pointer px-4 py-2 rounded-lg transition-all hover:bg-gray-100">
         <img src="user.png" alt="User Icon" class="h-6 w-6 mr-2" />
-        <span>Welcome, {{ loggedInHR }}</span>
+        <span>Welcome, {{ loggedInUser }}</span>
         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2 transition-transform"
           [class.rotate-180]="showDropdown" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd"
