--- a/src/app/features/timesheet/timesheet-dashboard/timesheet-dashboard.component.html
+++ b/src/app/features/timesheet/timesheet-dashboard/timesheet-dashboard.component.html
@@ -1,4 +1,9 @@
-<app-navbar></app-navbar>
+<app-navbar [showTimesheetLinks]="true"></app-navbar>
+<router-outlet></router-outlet>
+
+
+
+<!-- <app-navbar></app-navbar>
 
 <div class="container mx-auto mt-8 p-6 bg-gray-50 shadow-lg rounded-lg">
   <h2 class="text-2xl font-bold text-gray-700 mb-4">Timesheet</h2>
@@ -12,4 +17,4 @@
     <li><a routerLink="managers-hub" class="block bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md">Manager's Hub</a></li>
   </ul>
 </div>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
